fixed some footer spacings

--- a/src/styling.css
+++ b/src/styling.css
@@ -1,7 +1,7 @@
 body {
   background: #343a40;
   font-family: "Roboto", serif;
-  font-optical-sizing: auto;
+  font-size: 18px;
   font-weight: 200;
   font-style: normal;
   font-variation-settings: "wdth" 100;
@@ -49,7 +49,7 @@ p {
 
 .footer {
   color: #fff;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 a:hover {
@@ -71,7 +71,7 @@ a {
     text-align: center;
   }
   p {
-    font-size: 12px;
+    font-size: 14px;
     text-align: center;
   }
 }
